SIMD-wire LlamaModel.forwardStep; surface production-validated tokens/sec
Wire the production LlamaModel forward pass onto the SIMD Vector API
(jdk.incubator.vector) end-to-end:

- Pre-transpose per-layer attention projection weights at LlamaModel
  ctor (one-time cost at model load):
    * attnQ/K/V [emb, nHeads{,Kv}, headDim] -> [nHeads{,Kv}*headDim, emb]
    * attnOut [nHeads, headDim, emb]         -> [emb, nHeads*headDim]
  FFN gate/up/down unchanged — already in row-major [M, K] from GGUF.

- Replace scalar matVec3D / matVecOutput / matVec2D with Kernels.sgemv
  on the pre-transposed weights. All eight projections (Q, K, V,
  attn-out, FFN gate, FFN up, FFN down, output) now run on the SIMD
  path. The scalar matVec helpers have been removed entirely from
  LlamaModel.

- Replace inner-attention with Kernels.sgemv +
  Kernels.softmaxInPlaceSegment + Kernels.sgemm, all operating over
  flat MemorySegment slices of the KV cache (no per-step Tensor.wrap
  allocation):
    * Kernels.sgemv on the K-cache row slice produces logits[p]
      for p in 0..position.
    * Kernels.softmaxInPlaceSegment softmaxes the position prefix.
    * Kernels.sgemm with M=1, K=position+1, N=headDim produces
      out[h, :] = softmaxed @ V-cache row.

- Kernels API additions (alongside the existing Tensor variants):
    * Kernels.sgemv(MemorySegment aSeg, MemorySegment xSeg,
                     MemorySegment ySeg, int M, int K) — raw variant
                     used by the attention reduction.
    * Kernels.softmaxInPlaceSegment(MemorySegment seg, int n) — raw
                     variant used by the attention softmax.

- KVCache refactor: drop the 4-D Tensor.wrap (which Tensor's rank-3
  ceiling rejected) and expose flat MemorySegment accessors keys() /
  values() + an offsetOf(layer, kvHead, position, dim) helper.

- LlamaModel ctor pre-allocates per-step scratch Tensors once
  (hiddenState, qScratch, kScratch, vScratch, attnOutScratch,
  attnLogitsScratch, projOutScratch, gateScrat